--- a/superformula-frontend/src/styles/themes.module.scss
+++ b/superformula-frontend/src/styles/themes.module.scss
@@ -5,6 +5,8 @@
 
     --border-color: rgba(0, 0, 0, 0.1);
 
+    --elevation-z1: 0px 4px 10px rgba(0, 0, 0, 0.1);
+
     --typography-h1: 6rem;
     --typography-h2: 3.75rem;
     --typography-h3: 3rem;
