Improving user card adding icons and hover action

--- a/superformula-frontend/src/styles/themes.module.scss
+++ b/superformula-frontend/src/styles/themes.module.scss
@@ -1,7 +1,10 @@
 .defaultTheme {
     --primary-main: #ffffff;
+    --primary-main-contrast: #000000;
 
     --secondary-main: #f8f8f8;
+
+    --aux-color-1: #991313;
 
     --border-color: rgba(0, 0, 0, 0.1);
 
