--- a/superformula-frontend/src/components/Card/Card.module.scss
+++ b/superformula-frontend/src/components/Card/Card.module.scss
@@ -1,8 +1,10 @@
 .card {
     border-radius: 0.5rem;
     background-color: var(--primary-main);
+    transition: 0.2s;
 
     &:hover {
+        transition: 0.2s;
         box-shadow: var(--elevation-z1);
     }
 }
