Creating text field and input

--- a/superformula-frontend/src/styles/themes.module.scss
+++ b/superformula-frontend/src/styles/themes.module.scss
@@ -23,4 +23,6 @@
     --typography-button: 0.875rem;
     --typography-caption: 0.813rem;
     --typography-overline: 0.625rem;
+
+    font-family: Source Sans Pro;
 }
