--- a/superformula-frontend/src/components/TextField/TextField.module.scss
+++ b/superformula-frontend/src/components/TextField/TextField.module.scss
@@ -5,6 +5,7 @@
     .label {
         font-weight: 600;
         font-size: var(--typography-subtitle-1);
+        margin-bottom: 0.5rem;
     }
 
     .input {
