--- a/superformula-frontend/src/userManagement/components/UserCard/UserCard.module.scss
+++ b/superformula-frontend/src/userManagement/components/UserCard/UserCard.module.scss
@@ -54,9 +54,13 @@
     }
 
     .description {
+        white-space: nowrap;
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
         font-weight: 300;
         font-size: 16px;
         color: var(--primary-main-contrast);
-        width: 100%;
+        margin: 0;
     }
 }
