Creating Map component

--- a/superformula-frontend/src/userManagement/components/EditModal/EditModal.module.scss
+++ b/superformula-frontend/src/userManagement/components/EditModal/EditModal.module.scss
@@ -22,7 +22,7 @@
         padding: 4rem 0;
         column-gap: 2rem;
 
-        img {
+        .map {
             width: 32rem;
             height: 21rem;
             flex: 1;
