--- a/superformula-frontend/src/userManagement/components/EditModal/EditModal.module.scss
+++ b/superformula-frontend/src/userManagement/components/EditModal/EditModal.module.scss
@@ -22,6 +22,24 @@
         padding: 4rem 0;
         column-gap: 2rem;
 
+        .loadWrapper {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .wrongAdressWrapper {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            span {
+                font-size: 2rem;
+            }
+        }
+
         .map {
             width: 32rem;
             height: 21rem;
