--- a/superformula-frontend/src/components/Button/Button.module.scss
+++ b/superformula-frontend/src/components/Button/Button.module.scss
@@ -1,7 +1,7 @@
 .button {
     width: 17rem;
     height: 5rem;
-    font-size: 24px;
+    font-size: var(--typography-button);
     border-radius: 8px;
     border-color: var(--border-color);
 }
