--- a/superformula-frontend/src/styles/themes.module.scss
+++ b/superformula-frontend/src/styles/themes.module.scss
@@ -5,6 +5,7 @@
     --secondary-main: #f8f8f8;
 
     --aux-color-1: #991313;
+    --aux-color-2: #3498db;
 
     --border-color: rgba(0, 0, 0, 0.1);
 
