--- a/superformula-frontend/src/userManagement/components/EditModal/EditModal.module.scss
+++ b/superformula-frontend/src/userManagement/components/EditModal/EditModal.module.scss
@@ -9,6 +9,7 @@
     background-color: var(--secondary-main);
     padding: 4rem;
     width: 70%;
+    max-width: 60rem;
 
     .title {
         font-size: var(--typography-h4);
@@ -18,7 +19,6 @@
 
     .form {
         display: flex;
-        justify-content: space-between;
         padding: 4rem 0;
         column-gap: 2rem;
 
@@ -50,7 +50,6 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
         }
     }
 
