--- a/superformula-frontend/src/pages/UserManagement/UserManagement.module.scss
+++ b/superformula-frontend/src/pages/UserManagement/UserManagement.module.scss
@@ -1,38 +1,71 @@
+@import '../../styles//mixins.scss';
+
 .page {
-    background: var(--secondary-main);
-    height: 100vh;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
     overflow: auto;
+    height: 100vh;
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+        max-width: 100rem;
+        margin: auto;
+        overflow: auto;
+        height: 100%;
+        box-sizing: border-box;
+
+        @include respond-to('laptop') {
+            overflow: hidden;
+        }
+    }
 
     .header {
-        background: var(--secondary-main);
-        padding: 2rem;
-        position: sticky;
-        top: 0;
         display: flex;
-        justify-content: space-between;
-        height: 3rem;
-        align-items: center;
+        flex-direction: column;
+        gap: 1rem;
+
+        @include respond-to('laptop') {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        h1 {
+            font-weight: normal;
+            font-size: var(--typography-h4);
+            margin: 0;
+        }
+
+        input {
+            font-size: var(--typography-body-1);
+
+            @include respond-to('laptop') {
+                width: 16rem;
+            }
+        }
+    }
+
+    .cardsWrapper, .loadingWrapper {
+        flex: 1;
+        padding: 1rem 0;
     }
 
     .cardsWrapper {
-        flex: 1;
         display: grid;
-        justify-content: space-around;
-        grid-template-columns: repeat(auto-fill, 25rem);
-        gap: 4rem;
-        padding: 1rem 0;
-        box-sizing: border-box;
+        justify-content: space-between;
+        grid-template-columns: repeat(1,minmax(0,1fr));
+        gap: 2rem;
+
+        @include respond-to('laptop') {
+            grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+        }
     }
 
     .loadingWrapper {
-        flex: 1;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 1rem 0;
         box-sizing: border-box;
     }
 
@@ -40,6 +73,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-bottom: 2rem;
+
+        button {
+            cursor: pointer;
+        }
     }
 }
