--- a/superformula-frontend/src/userManagement/components/UserCard/UserCard.module.scss
+++ b/superformula-frontend/src/userManagement/components/UserCard/UserCard.module.scss
@@ -1,8 +1,8 @@
 .card {
     text-align: center;
     padding: 2rem 2.5rem;
-    width: 20rem;
-    height: 18rem;
+    max-width: 25rem;
+    max-height: 20rem;
 
     .actionButtons {
         width: 100%;
@@ -42,7 +42,11 @@
         width: 100%;
         justify-content: space-between;
 
-        .title {
+        h2 {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            text-align: left;
             font-size: var(--typography-h6);
         }
 
