--- a/superformula-frontend/src/pages/UserManagement/UserManagement.module.scss
+++ b/superformula-frontend/src/pages/UserManagement/UserManagement.module.scss
@@ -46,7 +46,8 @@
         }
     }
 
-    .cardsWrapper, .loadingWrapper {
+    .cardsWrapper,
+    .loadingWrapper {
         flex: 1;
         padding: 1rem 0;
     }
@@ -54,7 +55,7 @@
     .cardsWrapper {
         display: grid;
         justify-content: space-between;
-        grid-template-columns: repeat(1,minmax(0,1fr));
+        grid-template-columns: repeat(1, minmax(0, 1fr));
         gap: 2rem;
 
         @include respond-to('laptop') {
