--- a/superformula-frontend/src/styles/mixins.scss
+++ b/superformula-frontend/src/styles/mixins.scss
@@ -3,14 +3,14 @@ $mobile-width: calc(100vw - #{$mobile-padding});
 $max-container-width: 116rem;
 
 $breakpoints: (
-  "phone": 576px,
-  "tablet": 768px,
-  "laptop": 992px,
-  "desktop": 1200px,
+    'phone': 576px,
+    'tablet': 768px,
+    'laptop': 992px,
+    'desktop': 1200px,
 );
 
 @mixin respond-to($breakpoint) {
-  @media (min-width: map-get($breakpoints, $breakpoint)) {
-    @content;
-  }
+    @media (min-width: map-get($breakpoints, $breakpoint)) {
+        @content;
+    }
 }
