--- a/superformula-frontend/src/styles/themes.module.scss
+++ b/superformula-frontend/src/styles/themes.module.scss
@@ -8,6 +8,7 @@
     --aux-color-2: #3498db;
 
     --border-color: rgba(0, 0, 0, 0.1);
+    --border-color-accent: rgba(0, 0, 0, 0.4);
 
     --overlay: rgba(0, 0, 0, 0.4);
 
