--- a/superformula-frontend/src/styles/themes.module.scss
+++ b/superformula-frontend/src/styles/themes.module.scss
@@ -4,6 +4,12 @@
 
     --secondary-main: #f8f8f8;
 
+    --success-main: #6cc070;
+    --success-main-contrast: #ffffff;
+
+    --warn-main: #991313;
+    --warn-main-contrast: #ffffff;
+
     --aux-color-1: #991313;
     --aux-color-2: #3498db;
 
