--- a/superformula-frontend/src/components/Modal/Modal.module.scss
+++ b/superformula-frontend/src/components/Modal/Modal.module.scss
@@ -6,4 +6,14 @@
     bottom: 0;
     background-color: var(--overlay);
     z-index: 1;
+    animation: fadein 0.3s;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
