--- a/superformula-frontend/src/domains/users/pages/UserManagement/UserManagement.module.scss
+++ b/superformula-frontend/src/domains/users/pages/UserManagement/UserManagement.module.scss
@@ -21,6 +21,7 @@
             height: auto;
             max-width: 100rem;
             margin: auto;
+            min-height: 100%;
         }
     }
 
